// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast renders correctly (renders nothing) with empty props 1`] = `null`;

exports[`Toast renders correctly and don't renders close button if closeable=false 1`] = `
<div
  aria-live="polite"
  className="l3-style-toast l3-style-toast--type-positive"
  role="alert"
>
  <div
    className="l3-style-toast-icon-large"
  />
  <div
    className="l3-style-toast-content l3-style-toast-content-no-icon"
  >
    <div
      className="l3-style-toast-label"
    >
      Label
    </div>
    <div
      className="l3-style-toast-paragraph"
    >
      paragraph
    </div>
  </div>
</div>
`;

exports[`Toast renders correctly renders nothing when open is false 1`] = `null`;

exports[`Toast renders correctly when icon is hidden 1`] = `null`;

exports[`Toast renders correctly when open is true 1`] = `
<div
  aria-live="polite"
  className="l3-style-toast l3-style-toast--type-positive"
  role="alert"
>
  <div
    className="l3-style-toast-icon-large"
  />
  <div
    className="l3-style-toast-content l3-style-toast-content-no-icon"
  >
    <div
      className="l3-style-toast-label"
    >
      Label
    </div>
    <div
      className="l3-style-toast-paragraph"
    >
      paragraph
    </div>
  </div>
</div>
`;

exports[`Toast renders correctly with button 1`] = `
<div
  aria-live="polite"
  className="l3-style-toast l3-style-toast--type-positive"
  role="alert"
>
  <div
    className="l3-style-toast-icon-large"
  />
  <div
    className="l3-style-toast-content l3-style-toast-content-no-icon"
  >
    <div
      className="l3-style-toast-label"
    >
      Label
    </div>
    <div
      className="l3-style-toast-paragraph"
    >
      paragraph
    </div>
  </div>
  <div
    className="l3-style-toast-action"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-toast-action_button l3-style-button l3-style-button--size-small l3-style-button--kind-secondary l3-style-button--color-on-primary-color"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Undo 5
    </button>
  </div>
</div>
`;

exports[`Toast renders correctly with button and link 1`] = `
<div
  aria-live="polite"
  className="l3-style-toast l3-style-toast--type-positive"
  role="alert"
>
  <div
    className="l3-style-toast-icon-large"
  />
  <div
    className="l3-style-toast-content l3-style-toast-content-no-icon"
  >
    <div
      className="l3-style-toast-label"
    >
      Label
    </div>
    <div
      className="l3-style-toast-paragraph"
    >
      paragraph
    </div>
  </div>
  <div
    className="l3-style-toast-action"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-toast-action_button l3-style-button l3-style-button--size-small l3-style-button--kind-secondary l3-style-button--color-on-primary-color"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Undo 5
    </button>
  </div>
</div>
`;

exports[`Toast renders correctly with link 1`] = `
<div
  aria-live="polite"
  className="l3-style-toast l3-style-toast--type-positive"
  role="alert"
>
  <div
    className="l3-style-toast-icon-large"
  />
  <div
    className="l3-style-toast-content l3-style-toast-content-no-icon"
  >
    <div
      className="l3-style-toast-label"
    >
      Label
    </div>
    <div
      className="l3-style-toast-paragraph"
    >
      paragraph
    </div>
  </div>
  <div
    className="l3-style-toast-action"
  />
</div>
`;

exports[`Toast renders correctly with negative type 1`] = `
<div
  aria-live="polite"
  className="l3-style-toast l3-style-toast--type-negative"
  role="alert"
>
  <div
    className="l3-style-toast-icon-large"
  />
  <div
    className="l3-style-toast-content l3-style-toast-content-no-icon"
  >
    <div
      className="l3-style-toast-label"
    >
      Label
    </div>
    <div
      className="l3-style-toast-paragraph"
    >
      paragraph
    </div>
  </div>
</div>
`;
